# calcbot-rs

./: .gitignore  Cargo.toml
calcbot-attrs/: Cargo.toml
calcbot-attrs/src/: lib.rs  structures.rs  util.rs
src/: arg_parse.rs  database.rs  error.rs  fmt.rs  global.rs  handler.rs  main.rs  timer.rs  util.rs
src/commands/: about.rs  dictionary.rs  help.rs  link.rs  mod.rs  preview.rs
src/commands/calculate/: list_definitions.rs  mod.rs  mode.rs  to_latex.rs
src/commands/help/: commands.rs  mod.rs
src/commands/not_math/: aegyo.rs  mod.rs  random.rs  registered_trademark.rs  reverse.rs  scramble.rs  sort.rs  spacer.rs  title.rs  trademark.rs  trademarkinator.rs  uglify.rs  unscramble.rs
src/commands/parser/: mod.rs
src/commands/remind/: action.rs  at.rs  delete.rs  edit.rs  every.rs  increment.rs  mod.rs  pause.rs  recur.rs  resume.rs  toggle_shared.rs  view.rs
src/commands/sequence/: mod.rs  sum.rs  terms.rs
src/commands/unit_convert/: mod.rs  units.json  units.rs
src/database/: const_str.rs  mod.rs  user.rs
src/mock/: channel.rs  client.rs  event.rs  interaction.rs  message.rs  mod.rs
