[package]
name = "calcbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["mock"]
twilight = [
    "dep:twilight-gateway",
    "dep:twilight-http",
    "dep:twilight-cache-inmemory",
    "dep:twilight-model",
    "dep:twilight-util",
    "dep:twilight-validate"
]
mock = ["dep:twilight-model"]

[profile.release]
codegen-units = 1
lto = true

[dependencies.calcbot-attrs]
path = "calcbot-attrs"

[dependencies.cas-compute]
git = "https://github.com/ElectrifyPro/cas-rs.git"
branch = "dev"
features = ["mysql", "serde"]

[dependencies.cas-math]
git = "https://github.com/ElectrifyPro/cas-rs.git"
branch = "dev"

[dependencies.cas-parser]
git = "https://github.com/ElectrifyPro/cas-rs.git"
branch = "dev"

[dependencies]
ariadne = "0.2.0"
async-trait = "0.1.68"
dotenv = "0.15.0"
getrandom = "0.2.9"
lazy_static = "1.4.0"
log = "0.4.17"
mysql_async = "0.32.1"
random-string = "1.1.0"
regex = "1.7.3"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.181", features = ["derive"] }
serde_json = "1.0.96"
simple_logger = "4.1.0"
strip-ansi-escapes = "0.1.1"
sysinfo = "0.28.4"
tokio = { version = "1.27.0", default-features = false, features = ["macros", "rt-multi-thread"] }
twilight-cache-inmemory = { version = "0.15.1", optional = true }
twilight-gateway = { version = "0.15.1", optional = true }
twilight-http = { version = "0.15.1", optional = true }
twilight-model = { version = "0.15.1", optional = true }
twilight-util = { version = "0.15.1", optional = true, features = ["builder"] }
twilight-validate = { version = "0.15.1", optional = true }
