[package]
name = "calcbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = true

[dependencies.calcbot-attrs]
path = "calcbot-attrs"

[dependencies.cas-compute]
git = "https://github.com/ElectrifyPro/cas-rs.git"
branch = "dev"
features = ["mysql", "serde", "sync"]

[dependencies.cas-parser]
git = "https://github.com/ElectrifyPro/cas-rs.git"
branch = "dev"

[dependencies.cas-unit-convert]
git = "https://github.com/ElectrifyPro/cas-rs.git"
branch = "dev"

[dependencies.cas-vm]
git = "https://github.com/ElectrifyPro/cas-rs.git"
branch = "dev"

[dependencies]
ariadne = "0.2.0"
async-trait = "0.1.68"
chrono = "0.4.40"
dotenv = "0.15.0"
getrandom = "0.2.9"
lazy_static = "1.4.0"
log = "0.4.17"
mysql_async = "0.32.1"
paste = "1.0.15"
random-string = "1.1.0"
regex = "1.7.3"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.181", features = ["derive"] }
serde_json = "1.0.96"
simple_logger = "4.1.0"
strip-ansi-escapes = "0.1.1"
sysinfo = "0.28.4"
tokio = { version = "1.27.0", default-features = false, features = ["macros", "rt-multi-thread"] }
twilight-cache-inmemory = "0.15.1"
twilight-gateway = "0.15.1"
twilight-http = "0.15.1"
twilight-mention = "0.15.1"
twilight-model = "0.15.1"
twilight-util = { version = "0.15.1", features = ["builder"] }
twilight-validate = "0.15.1"
